--- a/src/web.config
+++ b/src/web.config
@@ -1,9 +1,36 @@
 <?xml version="1.0" encoding="utf-8" ?>
 	<configuration>
+		<system.web>
+			<authentication mode="Forms">
+				<credentials passwordFormat="Clear">
+					<user name="test" password="test" />
+				</credentials>
+			</authentication>
+			<authorization>
+				<allow users="test" />
+				<deny users="*" />
+			</authorization>
+		</system.web>
+		<location path="admin">
+			<system.web>
+				<authorization>
+					<allow roles="admin" />
+					<deny users="*" />
+				</authorization>
+			</system.web>
+		</location>
 		<system.webServer>
 			<staticContent>
 				<mimeMap fileExtension="woff" mimeType="application/font-woff" />
 				<mimeMap fileExtension="woff2" mimeType="application/font-woff2" />
 			</staticContent>
+			<directoryBrowse enabled="true" />
+			<security>
+				<authentication>
+					<anonymousAuthentication enabled="false" />
+					<basicAuthentication enabled="true" />
+					<windowsAuthentication enabled="false" />
+				</authentication>
+			</security>
 		</system.webServer>
 	</configuration>
