--- a/src/web.config
+++ b/src/web.config
@@ -3,7 +3,7 @@
 		<system.web>
 			<authentication mode="Forms">
 				<credentials passwordFormat="Clear">
-					<user name="test" password="test" />
+					<user name="dome" password="5e8cc89c7e52a0b11969befe180bbbf5" />
 				</credentials>
 			</authentication>
 			<authorization>
