--- a/src/web.config
+++ b/src/web.config
@@ -11,10 +11,10 @@
 				<deny users="*" />
 			</authorization>
 		</system.web>
-		<location path="admin">
+		<location path="dome">
 			<system.web>
 				<authorization>
-					<allow roles="admin" />
+					<allow roles="dome" />
 					<deny users="*" />
 				</authorization>
 			</system.web>
