--- a/src/web.config
+++ b/src/web.config
@@ -10,6 +10,7 @@
 				<allow users="test" />
 				<deny users="*" />
 			</authorization>
+			<customErrors mode="Off"/>
 		</system.web>
 		<location path="dome">
 			<system.web>
